syntax="proto3";

package book_service;

option go_package = "genproto/book_service";

service BookService {
    rpc CreateBook (Book) returns (Book){}
    rpc GetBook (BookId) returns (Book) {}
    rpc GetAllBooks (Req) returns (Books) {}
    rpc UpdateBook (NewBook) returns (Book) {}
    rpc DeleteBook (BookId) returns (Book) {}
}

message BookId {
    string BookId = 1;
}

message Book {
    string id = 1;
    string title = 2;
    string description = 3;
    int32 price = 4;
    string author = 5;
}

message NewBook {
    string id = 1;
    Book book = 2;
}

message Books {
    repeated Book books = 1;
    int32 count = 2;
}

message Req {
    int32 offset = 1;
    int32 limit = 2;
    string search = 3;
    string sort = 4;
    bool asc = 5;
}